--- a/estilos.css
+++ b/estilos.css
@@ -365,6 +365,7 @@ textarea {
         cursor: pointer;
     }
 
+ 
     .header h2 {
         letter-spacing: 1.5px;
         font-size: 1.5rem;
@@ -415,6 +416,11 @@ textarea {
         width: 100%;
         line-height: 1rem;
         /* margin: 4rem 0; */
+    }
+    .section-info img {
+        max-width: 80%;
+        margin-top: 2rem;
+        margin-right: 2rem;
     }
     .section--card img {
         max-width: 15rem;
